Updated folder structure

--- a/app/login.html
+++ b/app/login.html
@@ -8,6 +8,11 @@
 
 		<h1>Home</h1>
 		<p>The quick brown fox jumps over the lazy dog</p>
+		<div id="new"></div>
+
+
+
+		<script type="text/javascript" src="src/js/components/main.js"></script>
 
 	</body>
 </html>
